kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-helloworld-app
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8080
  selector:    
    app: kube-helloworld-app
  type: NodePort
